<?xml version="1.0" encoding="utf-8"?>
<com.demach.konotor.layout.MessageRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/konotor_chat_bgcolor"
	>

    <ListView
        android:id="@+id/konotor_conversation_haed_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/konotor_relative_layout_reply"
        android:layout_below="@+id/konotor_nav_m_relative_layout"
        android:background="@color/konotor_chat_bgcolor"
        android:divider="#FFFFFF"
        android:dividerHeight="0dp"
        android:transcriptMode="alwaysScroll" />

    <RelativeLayout
        android:id="@+id/konotor_nav_m_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/konotor_theme_color" >

            <ImageView
        android:id="@+id/konotor_message_back_bt"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="0dp" 
        android:padding="19dp"   
        android:layout_centerVertical="true"
        android:src="@drawable/konotor_nav_prev" 
        android:contentDescription="@string/konotor_go_back"
        />


    <com.demach.konotor.view.KonotorTextView
        android:id="@+id/konotor_conv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/konotor_speakerToggle_img"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/konotor_message_back_bt"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/konotor_white"
        android:textSize="20sp"
        android:textStyle="bold" />
    
        <ImageView
        android:id="@+id/konotor_speakerToggle_img"
        android:layout_width="27dp"
        android:layout_height="22dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/konotor_speakeron" 
        android:layout_margin="18dp"
  
        android:contentDescription="@string/konotor_toggle_speaker"/>
        
    </RelativeLayout>
    


<!--     <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/conversation_haed_list"
        android:layout_alignParentLeft="true"
        android:background="@color/light_gray" /> -->

    <RelativeLayout
        android:id="@+id/konotor_relative_layout_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/konotor_conversation_haed_list"
        android:layout_above="@+id/konotor_poweredby"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignRight="@+id/konotor_conversation_haed_list" 
        android:background="@color/konotor_white"
        >



        <RelativeLayout
            android:id="@+id/konotor_relative_layout_reply_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/konotor_m_message_reply_text_bt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:maxLines="4"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/konotor_m_message_reply_voice_bt"
                android:layout_toRightOf="@+id/konotor_m_message_reply_pic"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/konotor_compose_new_message"
                android:textColorHint="#606060"
                android:inputType="textMultiLine" 
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="#252525"
                android:background="@color/konotor_white"
                />
            
             <ImageView
                android:id="@+id/konotor_m_message_reply_pic"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/konotor_camera" 
                android:contentDescription="@string/konotor_response_with_voice"
                />

            <ImageView
                android:id="@+id/konotor_m_message_reply_voice_bt"
                android:background="@drawable/konotor_voice_overlay_recordbg"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:src="@drawable/konotor_mic2x" 
                android:contentDescription="@string/konotor_response_with_voice"
                android:visibility="visible"
                />
            
            <ImageView
                android:id="@+id/konotor_m_message_send_bt"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_margin="6dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/konotor_send2x"
                android:contentDescription="@string/konotor_send_message"
                android:visibility="gone"
                />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#D0D0D0" />

  		

    </RelativeLayout>
    <com.demach.konotor.view.KonotorTextView
                android:id="@+id/konotor_poweredby"
                android:layout_width="fill_parent"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                android:ems="10"
                android:textSize="10sp"
                android:text="Powered by Konotor"
                android:gravity="center"
                android:visibility="visible"
                android:textColor="#F5F5F5"
                android:background="#000000"
                />

</com.demach.konotor.layout.MessageRelativeLayout>