<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/konotor_unread_background_drawable"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/konotor_conv_child_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp" >
        <!-- android:visibility="invisible" -->

        <RelativeLayout
            android:id="@+id/konotor_conv_child_container_messages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/konotor_contactimage"
            android:background="@drawable/konotor_callout2x_alt"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/konotor_message_play_bt"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/konotor_voice_overlay_recordbg"
                android:src="@drawable/konotor_play2x" />

            <RelativeLayout
                android:id="@+id/konotor_relative_m_inner_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/konotor_message_play_bt" >

                <!-- android:progress="50" -->

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_user_m_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/konotor_support"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/konotor_light_gray"
                    android:textStyle="bold" />

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_message_m_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/konotor_message_play_progress"
                    android:layout_toRightOf="@+id/konotor_upload_status"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/konotor_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/konotor_light_gray" 
                    />
                
                <ImageView 
                    android:id="@+id/konotor_upload_status"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/konotor_voice_feedback_progress_end"
                    android:layout_alignTop="@+id/konotor_message_m_time"
                    android:layout_alignBottom="@+id/konotor_message_m_time"
                    android:src="@drawable/konotor_upload"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/konotor_message_play_progress"
                    android:contentDescription="@string/konotor_upload_status"/>

                <!-- android:visibility="invisible" -->

                <com.demach.konotor.layout.MediaProgressBar
                    android:id="@+id/konotor_message_play_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/konotor_user_m_name"
                    android:max="100"
                    android:maxHeight="3dp"
                    android:padding="0dp"
                    android:progressDrawable="@drawable/konotor_seek_drawable"
                    android:secondaryProgress="0"
                    android:thumb="@drawable/konotor_seekbar_thumb_small"
                    android:thumbOffset="9999dp" />

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_message_m_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/konotor_message_play_progress"
                    android:layout_marginLeft="5dp"
                    android:text="@string/konotor_duration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/konotor_light_gray" />

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_downloading_your_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/konotor_user_m_name"
                    android:text="@string/konotor_downloading"
                    android:textColor="@android:color/black"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/konotor_download_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/konotor_downloading_your_message"
                    android:layout_toRightOf="@+id/konotor_downloading_your_message"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <com.demach.konotor.view.KonotorTextView
                android:id="@+id/konotor_messageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/konotor_relative_m_inner_layout"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/konotor_a_very_long_message_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#252525" />
            
            <RelativeLayout
    		    android:id="@+id/konotor_photo_rel_container"
   		        android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
  		        android:layout_below="@+id/konotor_relative_m_inner_layout"
  		        android:paddingLeft="10dp"
                android:paddingRight="10dp"
        		android:layout_centerHorizontal="true"
        		android:paddingBottom="8dp"
        		android:paddingTop="8dp"
        		android:visibility="gone" >

        		<ImageView
            		android:id="@+id/konotor_photo_imageview"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
           		 	android:layout_centerHorizontal="true"
            		android:adjustViewBounds="true"
            		android:background="@android:color/white"
            		android:maxHeight="200dp"
            		android:maxWidth="260dp"
            		android:visibility="gone" />
    		</RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/konotor_contactimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/konotor_conv_child_container_messages"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:src="@drawable/konotor_support_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/konotor_sticker_rel_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/konotor_conv_child_container"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:visibility="gone" >

        <WebView
            android:id="@+id/konotor_sticker_webview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/konotor_sticker_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

    

</RelativeLayout>