<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/konotor_chat_bgcolor"    
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/konotor_conv_child_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:gravity="right"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/konotor_contactimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/konotor_conv_child_container_messages"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/konotor_placeholder_profile"
            android:visibility="gone" />

        <!-- android:visibility="invisible" -->

        <RelativeLayout
            android:id="@+id/konotor_conv_child_container_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/konotor_contactimage"
            android:layout_alignWithParentIfMissing="true"
            android:background="@drawable/chat_you"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/konotor_message_play_bt"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/konotor_voice_overlay_recordbg"
                android:visibility="gone"
                android:src="@drawable/konotor_play2x" />

            <RelativeLayout
                android:id="@+id/konotor_relative_m_inner_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/konotor_message_play_bt" >

                <!-- android:progress="50" -->
                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_user_m_name"
                    android:layout_alignParentTop="true"      
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:visibility="gone"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/konotor_you"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/konotor_light_gray"
                    android:textStyle="bold"
                    />   
               

                <com.demach.konotor.layout.MediaProgressBar
                    android:id="@+id/konotor_message_play_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/konotor_user_m_name"
                    android:layout_alignWithParentIfMissing="true"
                    android:max="100"
                    android:maxHeight="3dp"
                    android:padding="0dp"
                    android:progressDrawable="@drawable/konotor_seek_drawable"
                    android:secondaryProgress="0"
                    android:thumb="@drawable/konotor_seekbar_thumb_small"
                    android:visibility="gone"
                    android:thumbOffset="9999dp" />

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_message_m_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/konotor_message_play_progress"
                    android:text="@string/konotor_duration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone"
                    android:textColor="@color/konotor_light_gray" />

                <com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_downloading_your_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/konotor_user_m_name"
                    android:layout_alignWithParentIfMissing="true"
                    android:text="@string/konotor_downloading"
                    android:textColor="@android:color/black"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/konotor_download_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/konotor_downloading_your_message"
                    android:layout_toRightOf="@+id/konotor_downloading_your_message"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </RelativeLayout>

           <LinearLayout 
		    android:layout_below="@id/konotor_relative_m_inner_layout"
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="2dp"
		    android:paddingBottom="2dp"
		    >
            <com.demach.konotor.view.KonotorTextView
                android:id="@+id/konotor_messageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#252525"
                android:text="@string/konotor_a_very_long_message_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
             
            
                <RelativeLayout
    		    	android:id="@+id/konotor_photo_rel_container"
    		    	android:layout_width="match_parent"
   			    	android:layout_height="wrap_content"
   			    	 android:paddingLeft="10dp"
                	android:paddingRight="10dp"
                	android:layout_gravity="center"
        			android:paddingBottom="4dp"        			
        			android:paddingTop="8dp"
					android:maxWidth="260dp"	
        			android:visibility="gone" >

        			<ImageView
            			android:id="@+id/konotor_photo_imageview"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
           		 		android:layout_centerHorizontal="true"
            			android:adjustViewBounds="true"
            			android:background="@android:color/white"
            			android:maxHeight="200dp"
            			android:maxWidth="260dp"
            			android:visibility="gone" />
    			</RelativeLayout>
            
            

                <!-- android:visibility="invisible" -->
             <LinearLayout 
                  	android:orientation="horizontal"
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:paddingLeft="10dp"
		    		>
            	<com.demach.konotor.view.KonotorTextView
                    android:id="@+id/konotor_message_m_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingRight="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/konotor_time"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/konotor_light_gray"
                    />           
           
                <ImageView 
                    android:id="@+id/konotor_upload_status"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/konotor_upload"
                    android:contentDescription="@string/konotor_upload_status"/>
             	</LinearLayout>
             </LinearLayout>
                
        </RelativeLayout>
       
                
    </RelativeLayout>
         

    <RelativeLayout
        android:id="@+id/konotor_sticker_rel_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/konotor_conv_child_container"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:visibility="gone" >

        <WebView
            android:id="@+id/konotor_sticker_webview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/konotor_sticker_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>
<!--
    <RelativeLayout
        android:id="@+id/konotor_photo_rel_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/konotor_conv_child_container"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/konotor_photo_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:maxHeight="200dp"
            android:maxWidth="280dp"
            android:visibility="gone" />
    </RelativeLayout>
    -->

</RelativeLayout>